WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224100
Do not send samples to GPUProcess if mediastream video is not playing
https://bugs.webkit.org/show_bug.cgi?id=224100
Summary
Do not send samples to GPUProcess if mediastream video is not playing
youenn fablet
Reported
2021-04-02 02:30:43 PDT
<
rdar://74809558
>
Attachments
Patch
(3.03 KB, patch)
2021-04-02 02:33 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-04-02 02:33:40 PDT
Created
attachment 425000
[details]
Patch
youenn fablet
Comment 2
2021-04-02 05:47:54 PDT
Comment on
attachment 425000
[details]
Patch AS-debug is unrelated
EWS
Comment 3
2021-04-02 07:56:07 PDT
Committed
r275421
: <
https://commits.webkit.org/r275421
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 425000
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug