Do not send samples to GPUProcess if mediastream video is not playing https://bugs.webkit.org/show_bug.cgi?id=224100 <rdar://74809558>

Reviewed by Eric Carlson.

In case video is paused, there is no need to send samples to GPUProcess.
Instead, we can just exit early.
This fixes the issue of freezing camera in case a hidden video element tries to play the camera feed.
Manually tested.

* WebProcess/GPU/webrtc/SampleBufferDisplayLayer.cpp:
(WebKit::SampleBufferDisplayLayer::play):
(WebKit::SampleBufferDisplayLayer::pause):
(WebKit::SampleBufferDisplayLayer::enqueueSample):
* WebProcess/GPU/webrtc/SampleBufferDisplayLayer.h:


Canonical link: https://commits.webkit.org/236084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275421 268f45cc-cd09-0410-ab3c-d52691b4dbfc